fix: Widen aside spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -196,11 +196,12 @@ select {
 }
 
 aside {
-  width: 30%;
+  width: 25%;
   padding: 15px;
 }
 
 .right-side {
+  width: 75%;
   margin-left: 30px;
 }
 
